--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<form action="mailto:collinskoechck34@gmail.com" method="POST" enctype=”multipart/form-data” name="EmailForm">
 			Name: <br>
 			<input type="text"><br><br>
-			Message::<br> <textarea rows=”6″ cols="20"  ></textarea><br><br> <button type="submit" value="submit">submit</button>
+			Message:<br> <textarea rows=”6″ cols="20"  ></textarea><br><br> <button type="submit" value="submit">submit</button>
 		</form>
 	</div>
 </body>
