--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<div class="form">
 		<form action="mailto:collinskoechck34@gmail.com" method="POST" enctype=”multipart/form-data” name="EmailForm">
 			Name: <br>
-			<input type="text"><br><br>
-			Message:<br> <textarea rows=”6″ cols="20"  ></textarea><br><br> <button type="submit" value="submit">submit</button>
+			<input type="text" size=”19″ name=”ContactName”><br><br>
+			Message:<br> <textarea rows=”6″ name=”ContactCommentt” cols="20"  ></textarea><br><br> <button type="submit" value="submit">submit</button>
 		</form>
 	</div>
 </body>
