--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="form">
-		<form action="mailto:collinskoechck34@gmail.com" method="POST" enctype=”multipart/form-data” name="EmailForm">
+		<form action="mailto:kenyadevco@gmail.com" method="POST" enctype=”multipart/form-data” name="EmailForm">
 			Name: <br>
 			<input type="text" size=”19″ name=”ContactName”><br><br>
 			Message:<br> <textarea rows=”6″ name=”ContactCommentt” cols="20"  ></textarea><br><br> <button type="submit" value="submit">submit</button>
